--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The server for a multibanking app",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
