--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            mkdir -p ~/finanzkraft/ # create a new folder
-            cd ~/finanzkraft/ # navigate into the folder
-            git clone git@github.com:as19git67/finanzkraftserver.git # clone the repo into the 'app' folder
-            cd finanzkraftserver # navigate into the repo
-            npm install # install dependencies 
+            git clone git@github.com:as19git67/finanzkraftserver.git || exit 1
+            cd finanzkraftserver
+            npm install
         
