check for existing git repo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
-            git clone git@github.com:as19git67/finanzkraftserver.git || exit 1
+            if [ ! -d finanzkraftserver ]; then
+              git clone git@github.com:as19git67/finanzkraftserver.git || exit 1
+            fi
             cd finanzkraftserver
             npm install
         
