--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nconf": "^0.11.3",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "uuid": "^8.3.2"
   }
 }
