--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "hat": "0.0.3",
     "hbs": "^4.2.0",
     "http-errors": "^2.0.0",
+    "ibankit": "^1.5.0",
+    "ibantools": "^4.1.4",
     "jsonfile": "^6.1.0",
-    "knex": "^1.0.1",
+    "knex": "^1.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
-    "mssql": "^8.0.1",
+    "mssql": "^8.0.2",
     "nconf": "^0.11.3",
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
