--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -40,5 +39,25 @@ jobs:
             fi
             npm install
             sudo systemctl restart finanzkraftserver.service
-            
+  test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - name: test the server
+        uses: appleboy/ssh-action@v0.1.2
+        with:
+          host: ${{secrets.SSH_HOST}}
+          port: 221
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            if [ ! -d finanzkraftserver ]; then
+              exit 1
+            else
+              cd finanzkraftserver/tests
+              node device_registration.js
+            fi
+
         
